Fix scrollbar css.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -3,7 +3,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 13px;
 }
 
 /* Track */
@@ -22,4 +22,6 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #13a98b;
+  border: 4px solid transparent;
+  background-clip: padding-box;
 }
